# trabalho_pratico

./: README.md  pyproject.toml
trabalho/: processamento_dados.py  sidebar.py  tela_inicial.py
