[tool.poetry]
name = "trabalho_pratico"
version = "0.1.0"
description = "Trabalho pratico"
authors = ["Valtensir Lopes <valtensirl@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.1"
streamlit = "^1.2.0"
numpy = "^1.21.4"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
